[package]
name = "unreal_rust_compile_demo"
version = "0.1.0"
authors = ["Elliott Mahler <join.together@gmail.com>"]
edition = "2018"
description = "Compile a crate and run cbindgen on it in a single command."
repository = "https://github.com/ejmahler/unreal_rust_compile"
license-file = "LICENSE"

[profile.release]
lto = "thin"

[dependencies]
cbindgen = "~0.14.0"
itertools = "0.9"
rand = "0.7"
anyhow = "1"
cargo = "0.81"

[dependencies.clap]
version = "~2.33.0"
default-features = false
